--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         </div>
     </div>
     <div class="badge">
-  <span><b>Buy List</b></span>
+  <div class="badg"><span><b>Buy List</b></span></div>
   <div class="badge-content">
     Created by: Olena
   </div>
